# png-file

./: .gitignore  README  memo  png-file.cabal  todo
src/File/Binary/: CRC.hs  PNG.hs
src/File/Binary/PNG/: CRC.hs  Chunks.hs  Data.hs  DataChunks.hs  RW.hs
src/File/Binary/PNG/Chunks/: CRC.hs  Chunks.hs  Data.hs  Each.hs  Structures.hs  TH.hs  Templates.hs
src/File/Binary/PNG/Chunks/Data/: TH.hs
src/Language/Haskell/TH/: Tools.hs
test/: Chunks.hs  DrawBitmap.hs  instanceTH.hs  readICCP.hs  readICCP2.hs  readPNG.hs  readPNG2.hs  reify.hs  showPNG.hs  testFilter.hs  testPNGImageL.hs  testTypes.hs
