build-type:	Simple
cabal-version:	>= 1.8

name:		png-file
version:	0.0.1
stability:	Experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>
homepage:	https://skami.iocikun.jp/haskell/packages/png-file

license:	BSD3
license-file:	LICENSE

category:	File
synopsis:	read/write png file
description:

    It's just alpha version now.

source-repository	head
    type:	git
    location:	git://github.com/YoshikuniJujo/png-file.git

source-repository	this
    type:	git
    location:	git://github.com/YoshikuniJujo/png-file.git
    tag:	0.0.1

library
    hs-source-dirs:	src
    exposed-modules:	File.Binary.PNG
    other-modules:
        File.Binary.PNG.CRC,
        File.Binary.PNG.RW,
        File.Binary.PNG.Chunks
    build-depends:	base > 3 && < 5, binary-file, bytestring, zlib, array
    ghc-options:	-Wall
